@@ -159,6 +159,7 @@ They are:</p>
      **/.cvsignore
      **/SCCS
      **/SCCS/**
+     **/vssver.scc
 </pre>
 <p>If you do not want these default excludes applied, you may disable them with the 
 <code>defaultexcludes=&quot;no&quot;</code> attribute.</p>
